--- a/01-sample-playbook.yml
+++ b/01-sample-playbook.yml
@@ -1,8 +1,10 @@
 - name: Sample Playbook
-  hosts: 
-        - all
+  hosts:
+   - all
   #hosts: all
   tasks:
     - name: Print HelloWorld
       debug:
-         msg: Hello World
+        msg: Hello World
+  roles:
+    - sample
