--- Auto-Git Commit ---

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -82,7 +82,7 @@ inventory       = /home/centos/ansible/inventory
 
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
-remote_user = centos
+#remote_user = centos
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
@@ -111,7 +111,7 @@ remote_user = centos
 
 # if set, always use this private key file for authentication, same as
 # if passing --private-key to ansible or ansible-playbook
-private_key_file = /home/centos/.ssh/id_rsa
+#private_key_file = /home/centos/.ssh/id_rsa
 
 # If set, configures the path to the Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
