--- Auto-Git Commit ---

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -82,7 +82,7 @@ inventory       = /home/centos/ansible/inventory
 
 # default user to use for playbooks if user is not specified
 # (/usr/bin/ansible will use current user as default)
-#remote_user = centos
+remote_user = centos
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
