--- a/02-vars.yml
+++ b/02-vars.yml
@@ -3,6 +3,7 @@
   vars: 
     URL1: play.google.com
   tasks:
-    - name: Print a Variable from pal
+    - name: Print a Variable from play
       debug:
          msg: URL = {{URL}}
+  
