--- a/02-vars.yml
+++ b/02-vars.yml
@@ -6,4 +6,4 @@
     - name: Print a Variable from play
       debug:
          msg: URL = {{URL}}
-    - name: Print a Variable from file
+    - name: Print a Variable from File
