--- a/02-vars.yml
+++ b/02-vars.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Print a Variable from play
       debug:
-         msg: URL = {{URL}}
+         msg: URL = {{URL1}}
     - name: Print a Variable from File
       debgu:
         msg: URL =={{URL2}}
