--- Auto-Git Commit ---

--- a/02-vars.yml
+++ b/02-vars.yml
@@ -2,8 +2,8 @@
   hosts: all
   vars: 
     URL1: play.google.com
-  vars_fils:
-    - vars.ymls
+  vars_files:
+    - vars.yml
   tasks:
     - name: Print a Variable from play
       debug:
