--- a/02-vars.yml
+++ b/02-vars.yml
@@ -9,5 +9,5 @@
       debug:
          msg: URL = {{URL1}}
     - name: Print a Variable from File
-      debgu:
+      debug:
         msg: URL =={{URL2}}
