--- Auto-Git Commit ---

--- a/02-vars.yml
+++ b/02-vars.yml
@@ -11,4 +11,5 @@
     - name: Print a Variable from File
       debug:
         msg: URL =={{URL2}}
-    - name: 
+    - name: Demo on task level variable
+      
