--- a/02-vars.yml
+++ b/02-vars.yml
@@ -13,4 +13,5 @@
         msg: URL =={{URL2}}
     - name: Demo on task level variable
       vars:
-      URL3: tasks.
+      URL3: tasks.google.com
+      
