--- Auto-Git Commit ---

--- a/02-vars.yml
+++ b/02-vars.yml
@@ -11,7 +11,7 @@
     - name: Print a Variable from File
       debug:
         msg: URL =={{URL2}}
-    - name: Demo on task level variable
+    - name:  task level variable
       vars:
         URL3: tasks.google.com
       debug:
