--- a/02-vars.yml
+++ b/02-vars.yml
@@ -18,4 +18,4 @@
         msg: URL = {{URL3}}
     - name: Print Variable from host file
       debug: 
-        msg: URL = 
+        msg: URL = {{URL4}}
