--- Auto-Git Commit ---

--- a/02-vars.yml
+++ b/02-vars.yml
@@ -19,4 +19,5 @@
     - name: Print Variable from Host file
       debug: 
         msg: URL = {{URL4}}
-    - name: Print Variable 
+    - name: Print Variable from CLI
+      debi
