--- Auto-Git Commit ---

--- a/02-vars.yml
+++ b/02-vars.yml
@@ -28,4 +28,4 @@
        URL: tasks.google.com
       debug: 
         msg: URL = {{URL}} 
-      - name: Print Factt
+      - name: Print Fact Vari
