--- a/02-vars.yml
+++ b/02-vars.yml
@@ -30,5 +30,4 @@
         msg: URL = {{URL}} 
     - name: Print Fact Variables
       debug: 
-        msg: {{ansible distribution}}
-        
+        msg: OS = {{ansible distribution}}
