--- a/02-vars.yml
+++ b/02-vars.yml
@@ -31,4 +31,4 @@
     - name: Print Fact Variable
       debug: 
         msg: OS = {{ansible_distribution}}
-    - name: Run    
+    - name: Run a shell command and    
