--- a/02-vars.yml
+++ b/02-vars.yml
@@ -32,4 +32,4 @@
       debug: 
         msg: OS = {{ansible_distribution}}
     - name: Run a shell command and store output
-         
+      shell:    
