--- Auto-Git Commit ---

--- a/02-vars.yml
+++ b/02-vars.yml
@@ -37,3 +37,8 @@
     - name: Print uptime output
       debug:
         msg: "{{out.stdout}}"
+    -name: print OUTPUT
+     debug:
+       msg: "{{OUTPUT}}"
+  roles:
+    - demo:
