--- a/02-vars.yml
+++ b/02-vars.yml
@@ -1,45 +1,45 @@
 - name: Demo on Variables
   hosts: all
-  vars: 
+  vars:
     URL1: play.google.com
     URL: play.google.com
   vars_files:
     - vars.yml
   tasks:
-    - name: Print a Variable from play
+    - name: Print a Variable from Play
       debug:
-         msg: URL = {{URL1}}
-    - name: Print a Variable from File
+        msg: URL = {{URL1}}
+    - name: Print a varibale from File
       debug:
-        msg: URL =={{URL2}}
-    - name: Print task level variable
+        msg: URL = {{URL2}}
+    - name: Print Task level variables
       vars:
         URL3: tasks.google.com
       debug:
         msg: URL = {{URL3}}
     - name: Print Variable from Host file
-      debug: 
+      debug:
         msg: URL = {{URL4}}
     - name: Print Variable from CLI
       debug:
         msg: URL = {{URL5}}
     - name: Show Variable Precedence
-      vars: 
-       URL: tasks.google.com
-      debug: 
-        msg: URL = {{URL}} 
+      vars:
+        URL: tasks.google.com
+      debug:
+        msg: URL = {{URL}}
     - name: Print Fact Variable
       debug:
         msg: OS = {{ansible_distribution}}
     - name: Run a shell command and store output
       shell: uptime
       register: out
+      # out is user defined variable and variable name is our choice
     - name: Print uptime output
       debug:
         msg: "{{out.stdout}}"
-    
-    
-    - name: Declare a variable/fact 
+## In Ansible if value starts with a variable then it has to be double quoted.
+    - name: Declare a variable/fact
       set_fact:
         OUTPUT: "{{out.stdout}}"
 
@@ -48,4 +48,4 @@
         msg: "{{OUTPUT}}"
 
   roles:
-    - demo
+    - sample
