--- Auto-Git Commit ---

--- a/roboshop.yml
+++ b/roboshop.yml
@@ -2,8 +2,13 @@
   hosts: FRONTEND
   roles:
     - frontend
+
 - name: RoboShop Project setup - MongoDB
   hosts: MONGODB
   roles:
     - mongodb
-    - 
+
+- name: RoboShop Project setup - Catalogue
+  hosts: CATALOGUE
+  roles:
+    - catalogue
