--- Auto-Git Commit ---

--- a/roboshop.yml
+++ b/roboshop.yml
@@ -8,13 +8,14 @@
 - name: RoboShop Project setup - MongoDB
   hosts: MONGODB
   tags: mongodb
-  become: 
+  become: yes
   roles:
     - mongodb
 
 - name: RoboShop Project setup - Catalogue
   hosts: CATALOGUE
   tags: catalogue
+  become: yes
   roles:
     - catalogue
 
