--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -5,4 +5,4 @@
 
 - name: Download Frontend Archive
   ansible.builtin.unarchive:
-    src: "httphttps://github.com/roboshop-devops-project/frontend/archive/main.zip"
+    src: "https://github.com/roboshop-devops-project/frontend/archive/main.zip"
