--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -6,4 +6,5 @@
 - name: Download Frontend Archive
   ansible.builtin.unarchive:
     src: "https://github.com/roboshop-devops-project/frontend/archive/main.zip"
-    dest: 
+    dest: /tmp
+    remote_
