--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -9,6 +9,6 @@
     dest: /tmp
     remote_src: yes
 
-- name: Remove old content
+- name: Remove old contenthome/
   ansible.builtin.file:
-  path:/
+  path: /user/
