--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -14,4 +14,4 @@
   path: /user/share/nginx/html
   state: absent
 
-- name: copy Extracted content to Nginx path
+- name: copy Extracted Content to Nginx path
