--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -11,7 +11,7 @@
 
 - name: Remove old content
   ansible.builtin.file:
-  path: /user/share/nginx/html
+  path: /usr/share/nginx/html
   state: absent
 
 - name: copy Extracted Content to Nginx path
