--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -17,5 +17,4 @@
 - name: copy Extracted Content to Nginx path
   ansible.builtin.copy:
   src: /tmp/frontend-main/static
-  dest: /user/share/nginx/html
-  remot
+  dest: 
