--- Auto-Git Commit ---

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -16,5 +16,5 @@
 
 - name: copy Extracted Content to Nginx path
   ansible.builtin.copy:
-  src: /tmp/frontend-main/static
+  src: /tmp/frontend
   dest: 
