--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -16,4 +16,4 @@
 
 - name: Copy Extracted content to Nginx path
   ansible.builtin.copy:
-    src: /tmp/frontend
+    src: /tmp/frontend-main/static
