--- Auto-Git Commit ---

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -17,4 +17,4 @@
 - name: Copy Extracted content to Nginx path
   ansible.builtin.copy:
     src: /tmp/frontend-main/static
-    dest: /usr/share/
+    dest: /usr/share/nginx/html
