--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -17,4 +17,5 @@
 - name: Copy Extracted Content to Nginx path
   ansible.builtin.copy:
     src: /tmp/frontend-main/static
-    dest: /usr/share/nginx/html
+    dest: /usr/share/nginx/htm
+    
