--- a/ansible.cfg
+++ b/ansible.cfg
@@ -283,7 +283,7 @@ remote_user = centos
 # ssh arguments to use
 # Leaving off ControlPersist will result in poor performance, so use
 # paramiko on older platforms rather than removing it, -C controls compression use
-#ssh_args = -C -o ControlMaster=auto -o ControlPersist=60s -o 
+#ssh_args = -C -o ControlMaster=auto -o ControlPersist=60s -o UserKnown
 
 # The path to use for the ControlPath sockets. This defaults to
 # "%(directory)s/ansible-ssh-%%h-%%p-%%r", however on some systems with
