--- a/roles/frontend/files/roboshop.conf
+++ b/roles/frontend/files/roboshop.conf
@@ -6,10 +6,10 @@
     }
     error_page   500 502 503 504  /50x.html;
     location /api/catalogue/ { proxy_pass http://abc.roboshop.internal:8080/; }
-    location /api/user/ { proxy_pass http://localhost:8080/; }
-    location /api/cart/ { proxy_pass http://localhost:8080/; }
-    location /api/shipping/ { proxy_pass http://localhost:8080/; }
-    location /api/payment/ { proxy_pass http://localhost:8080/; }
+    location /api/user/ { proxy_pass http://abc.roboshop.internal:8080/; }
+    location /api/cart/ { proxy_pass http://abc.roboshop.internal:8080/; }
+    location /api/shipping/ { proxy_pass http://abc.roboshop.internal:8080/; }
+    location /api/payment/ { proxy_pass http://abc.roboshop.internal:8080/; }
     location /nginx_status {
         stub_status on;
         access_log off;
