--- a/roles/frontend/files/roboshop.conf
+++ b/roles/frontend/files/roboshop.conf
@@ -5,7 +5,7 @@
     try_files $uri /images/placeholder.jpg;
     }
     error_page   500 502 503 504  /50x.html;
-    location /api/catalogue/ { proxy_pass http://abc.roboshop.internal:8080/; }
+    location /api/catalogue/ { proxy_pass http://.roboshop.internal:8080/; }
     location /api/user/ { proxy_pass http://abc.roboshop.internal:8080/; }
     location /api/cart/ { proxy_pass http://abc.roboshop.internal:8080/; }
     location /api/shipping/ { proxy_pass http://abc.roboshop.internal:8080/; }
