--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -22,7 +22,7 @@
 
 - name: Copy Roboshop Config file
   copy: 
-    src: roboshop.con
+    src: roboshop.conf
     dest: /etc/nginx/default.d/roboshop.conf
      
 - name: Restart Nginx
