--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -15,7 +15,7 @@
 # yum install -y mongodb-org 
 # systemctl enable mongod
 # systemctl start mongod
-Update Liste IP address from 127.0.0.1 to 0.0.0.0 in config file
+#Update Liste IP address from 127.0.0.1 to 0.0.0.0 in config file
 Config file: /etc/mongod.conf
 
 then restart the service
