--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -18,11 +18,11 @@
 #Update Liste IP address from 127.0.0.1 to 0.0.0.0 in config file
 #Config file: /etc/mongod.conf
 
-##then restart the service
+#then restart the service
 
 # systemctl restart mongod
-Every Database needs the schema to be loaded for the application to work.
-Download the schema and load it.
+#Every Database needs the schema to be loaded for the application to work.
+#Download the schema and load it.
 
 # curl -s -L -o /tmp/mongodb.zip "https://github.com/roboshop-devops-project/mongodb/archive/main.zip"
 
