--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -11,7 +11,8 @@
 - name: Update MongoDB Listen Address
   ansible.builtin.replace:
   path: /etc/mongod.conf
-  regexp: '127.o.o.1'
+  regexp: '127.0.0.1'
+  re
 
 
 #Install Mongo & Start Service.
