--- Auto-Git Commit ---

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -12,7 +12,7 @@
   ansible.builtin.replace:
   path: /etc/mongod.conf
   regexp: '127.0.0.1'
-  re
+  replace: '0.0.0.0'
 
 
 #Install Mongo & Start Service.
