--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -15,7 +15,7 @@
   replace: '0.0.0.0'
 
 - name: Start MongoDB Service
-  sys.temd:
+  temd:
     name: mongod
     state: started
     eanbled: yes
