--- Auto-Git Commit ---

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -21,7 +21,7 @@
     eanbled: yes
 
 - name: Downlaod MongoDB Schema
-  ansible.builtin
+  ansible.builtin.unarchive:
 
 
 #Install Mongo & Start Service.
