--- Auto-Git Commit ---

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -24,7 +24,7 @@
   ansible.builtin.unarchive:
     src: "https://github.com/roboshop-devops-project/mongodb/archive/main.zip"
     dest: /tmp
-    
+    remote_src: yes
 
 
 #Install Mongo & Start Service.
