--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -26,7 +26,8 @@
     dest: /tmp
     remote_src: yes
 
-- name: Load Schema
+- name: Load Schema - Catalogue
+  
 
 
 #Install Mongo & Start Service.
