--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -28,7 +28,7 @@
 
 - name: Load Schema - Catalogue
   community.mongodb.mongodb_shell:
-  file: "/tmp/mongodb-main/"
+  file: "/tmp/mongodb-main/catalogue"
 
 
 #Install Mongo & Start Service.
