--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -29,7 +29,7 @@
 - name: Load Schema - Catalogue
   community.mongodb.mongodb_shell:
   file: "/tmp/mongodb-main/catalogue.js"
-  idempotment
+  idempoent
 
 #Install Mongo & Start Service.
 # yum install -y mongodb-org 
