--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -34,7 +34,7 @@
 - name: Load Scheme - Users
   community.mongodb.mongodb_shell:
     file: "/tmp/mongodb-main/users.js"
-    impotent
+    idempotent
 
 
 
