--- Auto-Git Commit ---

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -10,9 +10,9 @@
 
 - name: Update MongoDB Listen Address
   ansible.builtin.replace:
-  path: /etc/mongod.conf
-  regexp: '127.0.0.1'
-  replace: '0.0.0.0'
+    path: /etc/mongod.conf
+    regexp: '127.0.0.1'
+    replace: '0.0.0.0
 
 - name: Start MongoDB Service
   systemd:
