--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Setup MongoDB Repo
   copy: 
-    src: mongodb repo
+    src: mongodb.repo
     dest: /etc/yum.repos.d/mongodb.repo
      
 - name: Install MongoDB
