--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,5 +1,5 @@
-- name: Setup MongoDB Repo
-  copy: 
+- name: Setup MongoDB repo
+  copy:
     src: mongodb.repo
     dest: /etc/yum.repos.d/mongodb.repo
      
@@ -35,4 +35,3 @@
   community.mongodb.mongodb_shell:
     file: "/tmp/mongodb-main/users.js"
     idempotent: yes
-    
