--- Auto-Git Commit ---

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -18,7 +18,7 @@
   systemd:
     name: mongod
     state: started
-    eanbled: yes
+    enabled: yes
 
 - name: Downlaod MongoDB Schema
   ansible.builtin.unarchive:
