--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -12,4 +12,4 @@
 
 - name: Catalogue App Archive
   ansibli.builtin.unarchive:
-    src:
+    src: "https://github.com/roboshop-devops-project/catalogue/archive/main.zip"
