--- Auto-Git Commit ---

--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -13,4 +13,5 @@
 - name: Catalogue App Archive
   ansibli.builtin.unarchive:
     src: "https://github.com/roboshop-devops-project/catalogue/archive/main.zip"
-    deat
+    dest: /tmp
+    
