--- Auto-Git Commit ---

--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -23,4 +23,5 @@
 
 - name: Copy Extracted Cobtent to Catalogue Path
   ansible.builtin.copy:
-    src: /tmp/catalogue-main
+    src: /tmp/catalogue-main/
+    dest
