--- Auto-Git Commit ---

--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -24,4 +24,4 @@
 - name: Copy Extracted Cobtent to Catalogue Path
   ansible.builtin.copy:
     src: /tmp/catalogue-main/
-    dest: /home/
+    dest: /home/roboshop/catalogue
