--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -10,8 +10,8 @@
   user:
    name: roboshop
 
-- name:  Download Catalogue App Archive
-  ansibli.builtin.unarchive:
+- name: Download Catalogue App Archive
+  ansible.builtin.unarchive:
     src: "https://github.com/roboshop-devops-project/catalogue/archive/main.zip"
     dest: /tmp
     remote_src: yes
