--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -21,8 +21,4 @@
     path: /home/roboshop/catalogue
     state: absent
 
-- name: Copy Extracted Content to Catalogue Path
-  ansible.builtin.copy:
-    src: /tmp/catalogue-main/
-    dest: /home/roboshop/catalogue/
-    remote_src: yes
+- name: 
