--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -24,4 +24,4 @@
 - name: Copy Extracted Content to Catalogue Path
   ansibli.builtin.copy:
     src: /tmp/catalogue-main/
-    dest: /home/roboshop/c 
+    dest: /home/roboshop/catalogue
