--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -22,7 +22,7 @@
     state: absent
 
 - name: Copy Extracted Content to Catalogue Path
-  ansibli.builtin.copy:
+  ansible.builtin.copy:
     src: /tmp/catalogue-main/
     dest: /home/roboshop/catalogue
     remote_src: yes
