--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -21,7 +21,7 @@
     path: /home/roboshop/catalogue
     state: absent
 
-- name: Copy Extracted Content to Catalogue Path
+- name: Copy Extracted Content to catalogue Path
   ansible.builtin.copy:
     src: /tmp/catalogue-main/
     dest: /home/roboshop/catalogue
