--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -32,4 +32,4 @@
 - name: Install NodeJS Dependencies
   community.general.npm:
     path: /home/roboshop/catalogue
-    become_user: 
+    become_user: roboshop
