--- Auto-Git Commit ---

--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -39,4 +39,6 @@
 - name: Setup Catalogue Service File
   copy:
     src: systemd.service
-    dest: /etc/systemd/system/catalogue
+    dest: /etc/systemd/system/catalogue.service
+
+  
