--- a/roles/redis/tasks/main.yml
+++ b/roles/redis/tasks/main.yml
@@ -1,6 +1,6 @@
 - name: Install Redis Repos 
   yum:
-    name: http://rpms.remirepo.net/enterprise/remi-release-7.rpm -y
+    name: http://rpms.remirepo.net/enterprise/remi-release-7.rpm 
     state: present
 
 - name: Install Redis
