--- a/roles/user/files/systemd.service
+++ b/roles/user/files/systemd.service
@@ -3,7 +3,7 @@ Description = User Service
 [Service]
 User=roboshop
 Environment=REDIS_HOST=REDIS_ENDPOINT
-Environment=MONGO_URL="mongodb://:27017/users"
+Environment=MONGO_URL="mongodb://mongodb.roboshop.internal:27017/users"
 ExecStart=/bin/node /home/roboshop/user/server.js
 SyslogIdentifier=user
 
