--- Auto-Git Commit ---

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -30,10 +30,10 @@ As per the architecture diagram, MySQL is needed by
 Shipping Service
 So we need to load that schema into the database, So those applications will detect them and run accordingly.
 
-To download schema, Use the following command
+#To download schema, Use the following command
 
 # curl -s -L -o /tmp/mysql.zip "https://github.com/roboshop-devops-project/mysql/archive/main.zip"
-Load the schema for Services.
+#Load the schema for Services.
 
 # cd /tmp
 # unzip mysql.zip
