--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -18,12 +18,12 @@ Now a default root password will be generated and given in the log file.
 Next, We need to change the default root password in order to start using the database service.
 # mysql_secure_installation
 
-You can check the new password working or not using the following command.
+#You can check the new password working or not using the following command.
 
 # mysql -u root -p
 
-Run the following SQL commands to remove the password policy.
-> uninstall plugin validate_password;
+#Run the following SQL commands to remove the password policy.
+#> uninstall plugin validate_password;
 #Setup Needed for Application.
 #As per the architecture diagram, MySQL is needed by
 
