--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -12,10 +12,10 @@ Start MySQL.
 # systemctl enable mysqld 
 # systemctl start mysqld
 
-Now a default root password will be generated and given in the log file.
+#Now a default root password will be generated and given in the log file.
 # grep temp /var/log/mysqld.log
 
-Next, We need to change the default root password in order to start using the database service.
+#Next, We need to change the default root password in order to start using the database service.
 # mysql_secure_installation
 
 #You can check the new password working or not using the following command.
