--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,8 +1,8 @@
 # echo '[mysql57-community]
 name=MySQL 5.7 Community Server
-baseurl=http://repo.mysql.com/yum/mysql-5.7-community/el/7/$basearch/
-enabled=1
-gpgcheck=0' > /etc/yum.repos.d/mysql.repo
+#baseurl=http://repo.mysql.com/yum/mysql-5.7-community/el/7/$basearch/
+#enabled=1
+#gpgcheck=0' > /etc/yum.repos.d/mysql.repo
 
 #Install MySQL
 # yum remove mariadb-libs -y 
