--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -72,4 +72,5 @@
     dest: /tmp/reset.sql
 
 - name: Reset MySQL Password
-  shell: mysql --connect-expired-password -u root -p"${DEFAULT_PASSWORD} </tmp/
+  shell: mysql --connect-expired-password -u root -p"${DEFAULT_PASSWORD} </tmp/reset.sql
+  
