--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -71,6 +71,6 @@
     src: reset.sql
     dest: /tmp/reset.sql
 
-- name: Reset MySQL Password
+- name: reset MySQL Password
   shell: mysql --connect-expired-password -u root -p"${DEFAULT_PASSWORD}" </tmp/reset.sql
    
