--- Auto-Git Commit ---

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -43,7 +43,7 @@
 
 - name: Copy MySQL Repo
   copy:
-    src: my
+    src: mysql.repo
     dest: /etc/yum.repos.d/mysql.repo
 
 - name: Remove mariadb-libs package
