--- Auto-Git Commit ---

--- a/05-coditions.yml
+++ b/05-coditions.yml
@@ -6,7 +6,7 @@
     - name: centOS
       degug:
         msg: centOS
-        when: OS == 
+        when: OS == "Cento"
     - name: Ubuntu
       debug: 
         msg: Ubuntu
